--- a/PROJECT/my-app/package.json
+++ b/PROJECT/my-app/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.4",
     "bootstrap": "5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
